<resources>
    <string name="app_name">EcoAir</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="name">Nombre</string>
    <string name="or_register">No tienes cuenta?</string>
    <string name="or_register_here">Registrate aqui</string>
    <string name="or_login">Ya tienes cuenta?</string>
    <string name="or_login_here">Inicia sesión aqui</string>
    <string name="search_hint">Buscar</string>
    <string name="map">Mapa de Dispositivos</string>
    <string name="plaza_list">Lista de plazas</string>
    <string name="device_name">Nombre del dispositivo</string>
    <string name="plaza_name">Nombre de la plaza</string>
    <string name="device_id">ID del dispositivo</string>
    <string name="co2">CO2</string>
    <string name="nox">NOx</string>
    <string name="device_image">Imagen de la plaza</string>
    <string name="add_device">Agregar dispositivo</string>\
    <string name="save_device">Guardar dispositivo</string>
    <string name="registration_page">Página de Registro</string>
    <string name="login_page">Página de Inicio de Sesión</string>
    <string name="upload_image">Subir imagen</string>
    <string name="device_list">Lista de dispositivos</string>
</resources>
