<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="80dp"
    android:paddingHorizontal="50dp">

    <EditText
        android:id="@+id/deviceNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_name"
        android:background="@drawable/edit_text_style"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/plazaNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plaza_name"
        android:background="@drawable/edit_text_style"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/co2EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/co2"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text_style"
        android:layout_marginBottom="10dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/noxEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nox"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text_style"
        android:layout_marginBottom="10dp"
        android:padding="12dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="309dp"
        android:layout_height="218dp"
        android:layout_marginBottom="20dp" />


    <Button
        android:id="@+id/saveDeviceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/save_device"
        android:padding="12dp"/>
</LinearLayout>
