<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_100"
    android:padding="16dp">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp" />

    <LinearLayout
        android:id="@+id/listButton"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="377dp"
        android:layout_height="170dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_foreground"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="35dp"
            android:textColor="@color/text_100"
            android:text="@string/map" />
    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:id="@+id/mapButton"
        android:layout_width="377dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list_foreground"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="35dp"
            android:textColor="@color/text_100"
            android:text="@string/plaza_list" />
    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:id="@+id/addButton"
        android:layout_width="377dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button_style"
        android:src="@drawable/ic_add_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapButton"
        app:layout_constraintVertical_bias="0.0" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_foreground"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="35dp"
            android:textColor="@color/text_100"
            android:text="@string/add_device" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
